working dependant and independant model

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
     -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <title>Crown Cloth</title>
+  <title>Modal</title>
 </head>
 
 <body>
